# py-ddd

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: ---bug--bug-request.md  bug-request.md  feature_request.md
api/: Dockerfile  alembic.ini  pyproject.toml
api/api/: main.py
api/api/apps/controllers/: user.py
api/api/domains/: __init__.py  todo.py
api/api/domains/chat/: chat.py  chat_exception.py  chat_repository.py
api/api/domains/room/: room_exception.py  room_repository.py
api/api/domains/todo/: todo.py  todo_repository.py
api/api/domains/user/: user.py  user_error.py  user_repository.py
api/api/infra/nosql/: mongo.py
api/api/infra/postgre/: database.py
api/api/infra/postgre/user/: user_dto.py
api/api/presentations/controllers/: chat.py  room.py  user.py
api/api/useases/commands/: chat.py
api/api/useases/queries/: __init__.py
front/: Dockerfile  jest.config.js  package.json  tsconfig.json
front/src/__tests__/: index.spec.tsx
front/src/__tests__/units/: index.spec.js
front/src/components/layouts/: TheFooter.tsx  TheHeader.tsx  TheLayout.tsx  index.ts
front/src/components/ui/: index.ts
front/src/pages/: _app.tsx
k8s/base/: kustomization.yaml
py-server/: Dockerfile  pyproject.toml
py-server/src/py_server/: main.py
py-server/src/py_server/controllers/: ticekt.py
py-server/src/py_server/domains/: ticket.py
py-server/src/py_server/services/: ticket.py
py-server/src/py_server/usecases/: ticket.py
py-server/src/py_server/utils/: __init__.py  day.py
py-server/tests/: test_py_server.py
(+3 files in other folders)
