[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["okakyo <oka@logly.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.26"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fastapi-code-generator = "^0.3.0"
flake8 = "^4.0.1"
black = "^21.10b0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
