[tool.poetry]
name = "py-server"
version = "0.1.0"
description = ""
authors = ["okakyo <oka@logly.co.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^21.7b0"
flake8 = "^3.9.2"
fastapi-code-generator = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
